# bird-cogs

./: .gitignore  README.md  dependabot.yml  info.json  pyproject.toml  tox.ini
.github/workflows/: ci.yml
aaa/: __init__.py  aaa.py  info.json  responses.py
tests/unit/: test_aaa.py
