[tool.poetry]
name = "bird-cogs"
version = "0.2.0"
description = "Custom (mostly fun) cogs for Red-DiscordBot"
authors = ["Max Hösel <red-cogs@maxhoesel.de>"]
license = "GPL-3.0-or-later"
packages = [
    { include = "aaa"},
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.10"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
Red-DiscordBot = "^3.4.14"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
