[tool.poetry]
name = "bird-cogs"
version = "0.2.0"
description = "Custom (mostly fun) cogs for Red-DiscordBot"
authors = ["Max Hösel <red-cogs@maxhoesel.de>"]
license = "GPL-3.0-or-later"
packages = [
    { include = "aaa"},
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pylint = "^2.12.2"
Red-DiscordBot = "^3.4.14"
autopep8 = "^2.0.0"
pytest-cov = "^3.0.0"
pytest-xdist = {extras = ["psutil"], version = "^3.0.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts="-nauto --basetemp=.pytest_tmp --cov=aaa --cov-report=html --cov-report=term --cov-report=xml"

[tool.autopep8]
max_line_length = 120
